20130719 - fhabermann
* added first stuff for memberpanel
* composer update

20130614 - fhabermann
* add home link to breadcrumb
* set light grey background
* add seperate pagetitle and subtitle
* added font awesome and changed icons

20130612 - fhabermann
* added some metro styles to navbar

20130603 - fhabermann
* added acl checks to file controller

20130602 - fhabermann
* added server side acl check to page and content controller

20130528 - fhabermann
* added save acl for page new and edit
* added acl check on getContents
* added acl check on getPages
* getPages returns array of Page objects
* redirect to page itself if root page is created
* added more rights to dump
* added more stuff to demp dumps
* added acl checks to navis

20130527 - fhabermann
* added save acl for content new and edit

20130524 - fhabermann
* bootstrap update to version 2.3.2
* dojo upgrade to 1.9.0
* jquery upgrade to 1.10.0

20130410 - fhabermann
* added acl to demo dump
* using tinyint in mysql instead of boolean
* fixed problems with true/false in mysql

20130407 - fhabermann
* added more acl checks

20130406 - fhabermann
* fixed big problem with Knowledgeroot_Acl that was used internaly wrong
* update composer
* added first acl checks

20130321 - fhabermann
* added first save acl feature

20130315 - fhabermann
* save user permissions in browser javascript var if permissions are changed

20130307 - fhabermann
* bootstrape upgrade to version 2.3.1
* added better accordion icon handling over extra js script

20130214 - fhabermann
* added js functions to handle permissions

20130208 - fhabermann
* bootstrap upgrade to version 2.3.0

20130206 - fhabermann
* added first permissionpanel as view helper

20130110 - fhabermann
* added first system permissions stuff like controller and templates

20130102 - fhabermann
* enable function to enable or disable user
* added delete for user
* added new permissions menu
* login only for active users
* added group handling

20121230 - fhabermann