@@ -125,7 +125,7 @@ $config = Zend_Registry::get('config');
 			<li class="divider-vertical"></li>
 			<li class="dropdown" style="border-top: 3px solid #1171A3;">
 			    <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-				<i class="icon-plus icon-white"></i>&nbsp;<strong>New</strong>
+				<i class="icon-plus icon-white"></i>&nbsp;<strong><?= $this->translate('New') ?></strong>
 				<b class="caret"></b>
 			    </a>
 			    <ul class="dropdown-menu">
